--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/home/qliu/.vim_runtime"]
-	path = /home/qliu/.vim_runtime
+[submodule ".vim_runtime"]
+	path = .vim_runtime
 	url = git@github.com:lqhl/vimrc.git
